tests/np_test_with_empty_port_range/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-empty-port-range
  namespace: ns1
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
    - ports:
        - port: 3535
          protocol: UDP
        - port: 10
          endPort: 1
          protocol: TCP
