test_outputs/connlist/np_test_with_empty_port_range_connlist_output.txt
0.0.0.0-255.255.255.255 => ns1/pod1[Deployment] : All Connections
0.0.0.0-255.255.255.255 => ns2/pod1[Deployment] : All Connections
ns1/pod1[Deployment] => 0.0.0.0-255.255.255.255 : UDP 3535
ns1/pod1[Deployment] => ns2/pod1[Deployment] : UDP 3535
ns2/pod1[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
ns2/pod1[Deployment] => ns1/pod1[Deployment] : All Connections
